# ssis-to-dbt

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  TEST_COVERAGE_ANALYSIS.md  docker-compose.yml  pyproject.toml  requirements.txt  run_agents.py  run_migration.py
.claude/: settings.json
config/: agents.yaml
dbt_project/: dbt_project.yml  package-lock.yml  profiles.yml.example
dbt_project/models/core/: agg_daily_sales.sql  dim_customer.sql  fct_inventory_snapshot.sql  fct_sales.sql  schema.yml
docs/: DEMO_SCRIPT.sh  TUTORIAL_VIDEO_SCRIPT.md  manim_explainer.py
output/: parsed_packages.json  parsing_report.md  scaffolding_report.md  schema_metadata.json  validation_log.json  validation_report.md
output/state/: migration_20260130_165144.json
samples/ssis_packages/: CustomerDataLoad.dtsx  InventorySync.dtsx  SalesFactETL.dtsx
scripts/init/: 01_create_sample_db.sql
src/: __init__.py  logging_config.py
src/agents/: __init__.py  analyzer.py  base.py  builder.py  context.py  diagnoser.py  executor.py  orchestrator.py  validator.py
src/agents/core/: __init__.py  (+7 more)
src/cli/: __init__.py  approval.py
src/connections/: __init__.py  sql_server.py
src/parser/: __init__.py  constants.py  models.py  ssis_parser.py  type_mappings.py  utils.py
src/validation/: __init__.py  models.py  remediation_agent.py  remediation_models.py  validator.py
tests/: __init__.py  test_models.py  test_parser_security.py  test_security.py  test_type_mappings.py  test_utils.py
ui/: package-lock.json  package.json  tsconfig.app.json
ui/src/: App.tsx  index.css
(+23 files in other folders)
