[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ssis-to-dbt"
version = "0.1.0"
description = "SSIS to dbt Migration Factory - Automated conversion of SSIS packages to dbt projects"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lxml>=4.9.0",
    "pydantic>=2.0.0",
    "python-dateutil>=2.8.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
ssis-parser = "src.parser.ssis_parser:main"

[tool.setuptools.packages.find]
where = ["."]
